implementação do findAll